fixed error message alignment

--- a/src/client/css/register.css
+++ b/src/client/css/register.css
@@ -2,4 +2,5 @@
   border: 4px solid red;
   width: 50%;
   margin-left: 325px;
+  text-align: center;
 }
